# bvwx

./: .pylintrc  Makefile  README.md  pyproject.toml  ruff.toml
doc/source/: conf.py  index.rst  installation.rst  overview.rst  quickstart.rst  reference.rst  release_notes.rst
ipynb/: grade_school_multiplication.ipynb
src/bvwx/: __init__.py  _arithmetic.py  _bits.py  _bitwise.py  _code.py  _count.py  _enum.py  _lbool.py  _logical.py  _predicate.py  _struct.py  _tuple.py  _unary.py  _union.py  _util.py  _word.py
tests/: test_arithmetic.py  test_array.py  test_bits.py  test_bitwise.py  test_code.py  test_count.py  test_enum.py  test_factory.py  test_logical.py  test_predicate.py  test_struct.py  test_tuple.py  test_unary.py  test_union.py  test_vec.py  test_word.py
