[project]
name = "bvwx"
version = "0.11.1"
description = "Bit Vectors With Xes"
readme = "README.md"

requires-python = ">=3.12"
dependencies = []

[project.urls]
Repository = "https://github.com/cjdrake/bvwx.git"

[tool.black]
line-length = 100

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-profiling>=1.8.1",
    "sphinx>=8.2.3",
]
